--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,45 +4,29 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>FrameWrokTesting.EndToEndTesting</td>
+<td>FrameWrokTesting.tests.EndToEndTesting</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>makePayment</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>resgistartionTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>orderConfirmation</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>confirmItems</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>loginTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>selectProduct</td>
+<td>submitOrder</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
 <td>&nbsp;</td>
 <td>browserSetup</td>
 <td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
