--- a/test-output/old/TestSuite/methods-alphabetical.html
+++ b/test-output/old/TestSuite/methods-alphabetical.html
@@ -1,18 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c09695">  <td>25/01/29 17:41:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.browserSetup(java.lang.String)[pri:0, instance:FrameWrokTesting.EndToEndTesting@687e99d8]">&gt;&gt;browserSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d9d18d">  <td>25/01/29 17:41:58</td>   <td>24314</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EndToEndTesting.confirmItems()[pri:0, instance:FrameWrokTesting.EndToEndTesting@687e99d8]">confirmItems</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d9d18d">  <td>25/01/29 17:41:52</td>   <td>18507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EndToEndTesting.loginTest()[pri:0, instance:FrameWrokTesting.EndToEndTesting@687e99d8]">loginTest</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d9d18d">  <td>25/01/29 17:42:00</td>   <td>26296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EndToEndTesting.makePayment()[pri:0, instance:FrameWrokTesting.EndToEndTesting@687e99d8]">makePayment</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d9d18d">  <td>25/01/29 17:42:03</td>   <td>29529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EndToEndTesting.orderConfirmation()[pri:0, instance:FrameWrokTesting.EndToEndTesting@687e99d8]">orderConfirmation</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d9d18d">  <td>25/01/29 17:41:48</td>   <td>14726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EndToEndTesting.resgistartionTest()[pri:0, instance:FrameWrokTesting.EndToEndTesting@687e99d8]">resgistartionTest</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d9d18d">  <td>25/01/29 17:41:53</td>   <td>19339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EndToEndTesting.selectProduct()[pri:0, instance:FrameWrokTesting.EndToEndTesting@687e99d8]">selectProduct</td> 
+<tr bgcolor="c09695">  <td>25/01/29 23:09:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.browserSetup(java.lang.String)[pri:0, instance:FrameWrokTesting.tests.EndToEndTesting@687e99d8]">&gt;&gt;browserSetup</td> 
+<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="c09695">  <td>25/01/29 23:09:57</td>   <td>28732</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeWindow()[pri:0, instance:FrameWrokTesting.tests.EndToEndTesting@687e99d8]">&lt;&lt;closeWindow</td> 
+<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="d9d18d">  <td>25/01/29 23:09:39</td>   <td>10278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EndToEndTesting.resgistartionTest()[pri:0, instance:FrameWrokTesting.tests.EndToEndTesting@687e99d8]">resgistartionTest</td> 
   <td>main@1361960727</td>   <td></td> </tr>
 </table>
