--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 1 failed,  1 skipped,  </span>
+                    <span class="method-stats">3 methods, 1 failed,  1 skipped,  1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -121,6 +121,20 @@
                       <br/>
                     </div> <!-- method-list-content skipped suite-TestSuite -->
                   </li>
+                  <li>
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-TestSuite" class="hide-methods passed suite-TestSuite"> (hide)</a> <!-- hide-methods passed suite-TestSuite -->
+                      <a href="#" panel-name="suite-TestSuite" class="show-methods passed suite-TestSuite"> (show)</a> <!-- show-methods passed suite-TestSuite -->
+                    </span>
+                    <div class="method-list-content passed suite-TestSuite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-TestSuite" title="FrameWrokTesting.tests.LoginErrorest" class="method navigator-link" hash-for-method="errorValidations">errorValidations</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content passed suite-TestSuite -->
+                  </li>
                 </ul>
               </div> <!-- suite-section-content -->
             </div> <!-- result-section -->
@@ -143,14 +157,14 @@
                   </a> <!-- resgistartionTest -->
                   <span class="method-name">resgistartionTest</span>
                   <div class="stack-trace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//h1[@class=&apos;headcolor&apos;]&quot;}
-  (Session info: MicrosoftEdge=132.0.2957.127)
+  (Session info: MicrosoftEdge=132.0.2957.140)
 For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
 Build info: version: &apos;4.28.1&apos;, revision: &apos;73f5ad48a2&apos;
 System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;18.0.1&apos;
 Driver info: org.openqa.selenium.edge.EdgeDriver
-Command: [31d24f7b89660d6aa5c9a814e16772f3, findElement {using=xpath, value=//h1[@class=&apos;headcolor&apos;]}]
-Capabilities {acceptInsecureCerts: false, browserName: MicrosoftEdge, browserVersion: 132.0.2957.127, fedcm:accounts: true, ms:edgeOptions: {debuggerAddress: localhost:59053}, msedge: {msedgedriverVersion: 132.0.2957.127 (cbce079b96b..., userDataDir: C:\Users\Dell\AppData\Local...}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:59053/devtoo..., se:cdpVersion: 132.0.2957.127, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 31d24f7b89660d6aa5c9a814e16772f3
+Command: [7a3529d090daa3bcaab96b3e47b810ae, findElement {using=xpath, value=//h1[@class=&apos;headcolor&apos;]}]
+Capabilities {acceptInsecureCerts: false, browserName: MicrosoftEdge, browserVersion: 132.0.2957.140, fedcm:accounts: true, ms:edgeOptions: {debuggerAddress: localhost:54246}, msedge: {msedgedriverVersion: 132.0.2957.140 (a81e27b375d..., userDataDir: C:\Users\Dell\AppData\Local...}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:54246/devtoo..., se:cdpVersion: 132.0.2957.140, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 7a3529d090daa3bcaab96b3e47b810ae
 	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
 	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
 	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
@@ -164,7 +178,7 @@ Session ID: 31d24f7b89660d6aa5c9a814e16772f3
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:362)
 	at org.openqa.selenium.support.pagefactory.DefaultElementLocator.findElement(DefaultElementLocator.java:68)
 	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:38)
-	at jdk.proxy2/jdk.proxy2.$Proxy13.getText(Unknown Source)
+	at jdk.proxy2/jdk.proxy2.$Proxy15.getText(Unknown Source)
 	at frameWrokTesting.pageComponents.RegistrationPage.formFillUp(RegistrationPage.java:84)
 	at FrameWrokTesting.tests.EndToEndTesting.resgistartionTest(EndToEndTesting.java:49)
 ... Removed 25 stack frames
@@ -184,13 +198,28 @@ Session ID: 31d24f7b89660d6aa5c9a814e16772f3
                   <a name="submitOrder">
                   </a> <!-- submitOrder -->
                   <span class="method-name">submitOrder</span>
-                  <div class="stack-trace">java.lang.Throwable: Method EndToEndTesting.submitOrder()[pri:0, instance:FrameWrokTesting.tests.EndToEndTesting@687e99d8] depends on not successfully finished methods
+                  <div class="stack-trace">java.lang.Throwable: Method EndToEndTesting.submitOrder()[pri:0, instance:FrameWrokTesting.tests.EndToEndTesting@46271dd6] depends on not successfully finished methods
 ... Removed 17 stack frames
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-TestSuite-class-skipped -->
+          <div class="suite-TestSuite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">FrameWrokTesting.tests.LoginErrorest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="errorValidations">
+                  </a> <!-- errorValidations -->
+                  <span class="method-name">errorValidations</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-TestSuite-class-passed -->
         </div> <!-- panel TestSuite -->
         <div panel-name="test-xml-TestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -201,10 +230,14 @@ Session ID: 31d24f7b89660d6aa5c9a814e16772f3
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite thread-count=&quot;1&quot; name=&quot;TestSuite&quot;&gt;
+  &lt;listeners&gt;
+    &lt;listener class-name=&quot;FrameWrokTesting.base.Listener&quot;/&gt;
+  &lt;/listeners&gt;
   &lt;test name=&quot;LoginTest&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;edge&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;FrameWrokTesting.tests.EndToEndTesting&quot;/&gt;
+      &lt;class name=&quot;FrameWrokTesting.tests.LoginErrorest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- LoginTest --&gt;
   &lt;test name=&quot;LoginTest(failed)&quot;&gt;
@@ -218,6 +251,12 @@ Session ID: 31d24f7b89660d6aa5c9a814e16772f3
           &lt;include name=&quot;browserSetup&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- FrameWrokTesting.tests.EndToEndTesting --&gt;
+      &lt;class name=&quot;FrameWrokTesting.tests.LoginErrorest&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;closeWindow&quot;/&gt;
+          &lt;include name=&quot;browserSetup&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- FrameWrokTesting.tests.LoginErrorest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- LoginTest(failed) --&gt;
 &lt;/suite&gt; &lt;!-- TestSuite --&gt;
@@ -231,10 +270,10 @@ Session ID: 31d24f7b89660d6aa5c9a814e16772f3
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">LoginTest (1 class)</span>
+                <span class="test-name">LoginTest (2 classes)</span>
               </li>
               <li>
-                <span class="test-name">LoginTest(failed) (1 class)</span>
+                <span class="test-name">LoginTest(failed) (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -260,20 +299,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'resgistartionTest')
 data.setCell(0, 2, 'FrameWrokTesting.tests.EndToEndTesting')
-data.setCell(0, 3, 18430);
+data.setCell(0, 3, 18570);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'submitOrder')
-data.setCell(1, 2, 'FrameWrokTesting.tests.EndToEndTesting')
-data.setCell(1, 3, 0);
+data.setCell(1, 1, 'errorValidations')
+data.setCell(1, 2, 'FrameWrokTesting.tests.LoginErrorest')
+data.setCell(1, 3, 7333);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'submitOrder')
+data.setCell(2, 2, 'FrameWrokTesting.tests.EndToEndTesting')
+data.setCell(2, 3, 0);
 window.suiteTableData['TestSuite']= { tableData: data, tableDiv: 'times-div-TestSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 18 seconds</span>
+              <span class="suite-total-time">Total running time: 25 seconds</span>
               <div id="times-div-TestSuite">
               </div> <!-- times-div-TestSuite -->
             </div> <!-- times-div -->
@@ -308,11 +351,26 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">resgistartionTest</span>
-                <span class="method-start">10280 ms</span>
+                <span class="method-start">3510 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeWindow</span>
-                <span class="method-start">28733 ms</span>
+                <span class="method-start">22114 ms</span>
+              </div> <!-- configuration-method after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">FrameWrokTesting.tests.LoginErrorest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">browserSetup(edge)</span>
+                <span class="method-start">22278 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">errorValidations</span>
+                <span class="method-start">25279 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closeWindow</span>
+                <span class="method-start">32616 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
