--- a/test-output/old/TestSuite/methods.html
+++ b/test-output/old/TestSuite/methods.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c09695">  <td>25/01/29 23:09:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.browserSetup(java.lang.String)[pri:0, instance:FrameWrokTesting.tests.EndToEndTesting@687e99d8]">&gt;&gt;browserSetup</td> 
+<tr bgcolor="808fce">  <td>25/02/07 23:15:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.browserSetup(java.lang.String)[pri:0, instance:FrameWrokTesting.tests.EndToEndTesting@46271dd6]">&gt;&gt;browserSetup</td> 
 <td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d9d18d">  <td>25/01/29 23:09:39</td>   <td>10278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EndToEndTesting.resgistartionTest()[pri:0, instance:FrameWrokTesting.tests.EndToEndTesting@687e99d8]">resgistartionTest</td> 
+<tr bgcolor="9187b0">  <td>25/02/07 23:15:23</td>   <td>3508</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EndToEndTesting.resgistartionTest()[pri:0, instance:FrameWrokTesting.tests.EndToEndTesting@46271dd6]">resgistartionTest</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="c09695">  <td>25/01/29 23:09:57</td>   <td>28732</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeWindow()[pri:0, instance:FrameWrokTesting.tests.EndToEndTesting@687e99d8]">&lt;&lt;closeWindow</td> 
+<tr bgcolor="808fce">  <td>25/02/07 23:15:42</td>   <td>22112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeWindow()[pri:0, instance:FrameWrokTesting.tests.EndToEndTesting@46271dd6]">&lt;&lt;closeWindow</td> 
+<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="808fce">  <td>25/02/07 23:15:42</td>   <td>22276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.browserSetup(java.lang.String)[pri:0, instance:FrameWrokTesting.tests.LoginErrorest@125290e5]">&gt;&gt;browserSetup</td> 
+<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="b67364">  <td>25/02/07 23:15:45</td>   <td>25277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginErrorest.errorValidations()[pri:0, instance:FrameWrokTesting.tests.LoginErrorest@125290e5]">errorValidations</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="808fce">  <td>25/02/07 23:15:52</td>   <td>32614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeWindow()[pri:0, instance:FrameWrokTesting.tests.LoginErrorest@125290e5]">&lt;&lt;closeWindow</td> 
 <td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
 </table>
