--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="be97eb">  <td>25/02/07 21:28:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.browserSetup(java.lang.String)[pri:0, instance:FrameWrokTesting.tests.LoginErrorest@7c214cc0]">&gt;&gt;browserSetup</td> 
+<tr bgcolor="a89de4">  <td>25/02/13 12:50:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.browserSetup(java.lang.String)[pri:0, instance:FrameWrokTesting.tests.LoginErrorest@14bee915]">&gt;&gt;browserSetup</td> 
 <td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="be97eb">  <td>25/02/07 21:28:54</td>   <td>5813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeWindow()[pri:0, instance:FrameWrokTesting.tests.LoginErrorest@7c214cc0]">&lt;&lt;closeWindow</td> 
+<tr bgcolor="a89de4">  <td>25/02/13 12:50:25</td>   <td>6163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeWindow()[pri:0, instance:FrameWrokTesting.tests.LoginErrorest@14bee915]">&lt;&lt;closeWindow</td> 
 <td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="acbf9b">  <td>25/02/07 21:28:52</td>   <td>3368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginErrorest.errorValidations()[pri:0, instance:FrameWrokTesting.tests.LoginErrorest@7c214cc0]">errorValidations</td> 
+<tr bgcolor="a7b187">  <td>25/02/13 12:50:22</td>   <td>3507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginErrorest.errorValidations()[pri:0, instance:FrameWrokTesting.tests.LoginErrorest@14bee915]">errorValidations</td> 
   <td>main@1361960727</td>   <td></td> </tr>
 </table>
